# Practice

./: CMakeLists.txt  Person.cpp  Person.h  Sales_item.cpp  Sales_item.h  chatA.c  chatB.c  cin.cpp  copy.c  fifo.c  fpathconf.c  main.cpp  mmap.c  mmap_anon.c  noblock.c  operator.cpp  parent-child-ipc.c  pipe.c  read.c  test.c  test.txt  write.c  面向对象
